--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
     content="Create a Your Token in less than a minute with MoonDeploy. No login. No setup. No coding required." />
   <meta property="og:description"
     content="Create a Your Token in less than a minute with MoonDeploy. No login. No setup. No coding required." />
-  <meta property="og:url" content="https://moondeploy.com/" />
+  <meta property="og:url" content="https://fiverr26326.github.io/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://moondeploy.com/static/media/moon-deploy.png" />
+  <meta property="og:image" content="https://fiverr26326.github.io/static/media/moon-deploy.png" />
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:image" content="https://moondeploy.com/static/media/moon-deploy.png" />
+  <meta property="twitter:image" content="https://fiverr26326.github.io/static/media/moon-deploy.png" />
   <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KB79ESXBB"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KB79"></script>
   <script>
     if (!window.location.toString().includes("127.0.0.1") && !window.location.toString().includes("localhost") && !window.location.toString().includes("192.168.")) {
       window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
-      gtag('config', 'G-7KB79ESXBB');
+      gtag('config', 'G-7KB79E');
     } else {
       console.log("development mode")
       function gtag(event, event_name) {
@@ -54,8 +54,8 @@
     "@context" : "http://schema.org",
     "@type" : "SoftwareApplication",
     "name" : "Token Generator",
-    "image" : "https://moondeploy.com/static/media/intro3.gif",
-    "url" : "https://moondeploy.com/",
+    "image" : "https://fiverr26326.github.io/static/media/intro3.gif",
+    "url" : "https://fiverr26326.github.io/",
     "author" : {
       "@type" : "Person",
       "name" : "Moon Deploy"
@@ -594,7 +594,7 @@
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(17, 0, 255, 0.2)">
       © 2021-2022 Copyright:
-      <a class="text-white" href="https://moondeploy.com">MoonDeploy</a>
+      <a class="text-white" href="https://fiverr26326.github.io">MoonDeploy</a>
     </div>
     <!-- Copyright -->
   </footer>
