--- a/create-token/index.html
+++ b/create-token/index.html
@@ -34,11 +34,11 @@
     content="Create token in less than a minute with the new Smart Contract Generator. No login. No setup. No coding required." />
   <meta property="og:description"
     content="Create token in less than a minute with the new Smart Contract Generator. No login. No setup. No coding required." />
-  <meta property="og:url" content="https://moondeploy.com/create-token/" />
+  <meta property="og:url" content="https://fiverr26326.github.io/create-token/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://moondeploy.com/static/media/moon-deploy.png" />
+  <meta property="og:image" content="https://fiverr26326.github.io/static/media/moon-deploy.png" />
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:image" content="https://moondeploy.com/static/media/moon-deploy.png" />
+  <meta property="twitter:image" content="https://fiverr26326.github.io/static/media/moon-deploy.png" />
   <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KB79ESXBB"></script>
@@ -689,7 +689,7 @@
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(17, 0, 255, 0.2)">
         © 2021-2022 Copyright:
-        <a class="text-white" href="https://moondeploy.com">Moon Deploy</a>
+        <a class="text-white" href="https://fiverr26326.github.io">Moon Deploy</a>
       </div>
       <!-- Copyright -->
     </footer>
