--- a/create-token/success/index.html
+++ b/create-token/success/index.html
@@ -43,25 +43,25 @@
       property="og:description"
       content="Create token in less than a minute with the new Smart Contract Generator. No login. No setup. No coding required."
     />
-    <meta property="og:url" content="https://moondeploy.com/" />
+    <meta property="og:url" content="https://fiverr26326.github.io/" />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://moondeploy.com/static/media/moon-deploy.png"
+      content="https://fiverr26326.github.io/static/media/moon-deploy.png"
     />
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:image"
-      content="https://moondeploy.com/static/media/moon-deploy.png"
+      content="https://fiverr26326.github.io/static/media/moon-deploy.png"
     />
     <meta
       name="google-site-verification"
-      content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY"
+      content="ao9hS7yDUw-d4m80i6qtmkMRx7ppAfEZ-dpqY"
     />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-7KB79ESXBB"
+      src="https://www.googletagmanager.com/gtag/js?id=G-7KBXBB"
     ></script>
     <script>
       if (
@@ -75,7 +75,7 @@
         }
         gtag("js", new Date());
 
-        gtag("config", "G-7KB79ESXBB");
+        gtag("config", "G-7KB7B");
       } else {
         console.log("development mode");
         function gtag(event, event_name) {
@@ -270,7 +270,7 @@
           <br />
           <div class="row">
             <mark class="col-sm ref_link"
-              >https://moondeploy.com?id=change_to_your_eth_address</mark
+              >https://fiverr26326.github.io?id=change_to_your_eth_address</mark
             >
             <div class="col-sm-1"></div>
 
@@ -471,7 +471,7 @@
         style="background-color: rgba(17, 0, 255, 0.2)"
       >
         © 2021-2022 Copyright:
-        <a class="text-white" href="https://moondeploy.com">Moon Deploy</a>
+        <a class="text-white" href="https://fiverr26326.github.io">Moon Deploy</a>
       </div>
       <!-- Copyright -->
     </footer>
