--- a/create-token/index.html
+++ b/create-token/index.html
@@ -39,16 +39,16 @@
   <meta property="og:image" content="https://fiverr26326.github.io/static/media/moon-deploy.png" />
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:image" content="https://fiverr26326.github.io/static/media/moon-deploy.png" />
-  <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
+  <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7ppAfEZ-dpqY" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KB79ESXBB"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KBBB"></script>
   <script>
     if (!window.location.toString().includes("127.0.0.1") && !window.location.toString().includes("localhost") && !window.location.toString().includes("192.168.")) {
       window.dataLayer = window.dataLayer || [];
       function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
 
-      gtag('config', 'G-7KB79ESXBB');
+      gtag('config', 'G-7KB79EB');
     }
     else {
       console.log("development mode")
