--- a/create-token/index.html
+++ b/create-token/index.html
@@ -384,7 +384,7 @@
 
           <p class="hint1">
             <strong>Note:</strong> If you want more functions,
-            <a href="https://t.me/MoonDeploy" onclick="gtag('event','contact_us_hint')">contact us.</a>
+            <a href="https://t.me/erc20bep20" onclick="gtag('event','contact_us_hint')">contact us.</a>
             👈
           </p>
           <div class="text-center">
@@ -423,7 +423,7 @@
           <dl class="tip" style="display: none;">
             <dt> 💡Tips:</dt>
             <dd>- try increase the gas limit.</dd>
-            <dd>- <a href="https://t.me/MoonDeploy">contact us</a> for help</dd>
+            <dd>- <a href="https://t.me/erc20bep20">contact us</a> for help</dd>
           </dl>
         </div>
         <div style="display: block;" class="actionGroup">
@@ -585,7 +585,7 @@
 
         <!-- Right -->
         <div>
-          <a href="https://t.me/MoonDeploy" class="icon" target="_blank" onclick="gtag('event','telegram')">
+          <a href="https://t.me/erc20bep20" class="icon" target="_blank" onclick="gtag('event','telegram')">
             <i class="fab fa-telegram fa-2x red"></i>
           </a>
           <!-- <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" class="icon" target="_blank"
@@ -639,7 +639,7 @@
                 Useful links
               </h6>
               <p>
-                <a href="https://t.me/MoonDeploy" target="_blank" class="text-reset"
+                <a href="https://t.me/erc20bep20" target="_blank" class="text-reset"
                   onclick="gtag('event','telegram')">Telegram</a>
               </p>
               <p>
@@ -653,7 +653,7 @@
                 <a href="https://forms.gle/mZjhovdVTizCwRSB8" class="text-reset" target="_blank"> Feedback</a>
               </p>
               <p>
-                <a href="https://t.me/MoonDeploy" class="text-reset" target="_blank"
+                <a href="https://t.me/erc20bep20" class="text-reset" target="_blank"
                   onclick="gtag('event','telegram')">Help</a>
               </p>
             </div>
@@ -668,7 +668,7 @@
                 Services
               </h6>
               <p>
-                <a href="https://t.me/MoonDeploy" class="text-reset" target="_blank"
+                <a href="https://t.me/erc20bep20" class="text-reset" target="_blank"
                   onclick="gtag('event','telegram')">Smart contract
                   development</a>
               </p>
