--- a/watch-token/index.html
+++ b/watch-token/index.html
@@ -31,11 +31,11 @@
     content="Watch Token. Create logo to for your token. Add token to wallet with customized logo." />
   <meta property="og:description"
     content="Watch Token. Create logo to for your token. Add token to wallet with customized logo." />
-  <meta property="og:url" content="https://moondeploy.com/watch-token/" />
+  <meta property="og:url" content="https://fiverr26326.github.io/watch-token/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://moondeploy.com/static/media/moon-deploy.png" />
+  <meta property="og:image" content="https://fiverr26326.github.io/static/media/moon-deploy.png" />
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:image" content="https://moondeploy.com/static/media/moon-deploy.png" />
+  <meta property="twitter:image" content="https://fiverr26326.github.io/static/media/moon-deploy.png" />
   <meta name="google-site-verification" content="ao9hS7yDUw-d4m80i6qtmkMRx7pAaSxWapAfEZ-dpqY" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-7KB79ESXBB"></script>
@@ -281,7 +281,7 @@
         <div style="display: block;" class="actionGroup">
           <!-- <p class="hint1">
             <strong>Note:</strong> If you want more functions,
-            <a href="https://t.me/MoonDeploy" onclick="gtag('event','contact_us_hint')">contact us.</a>
+            <a href="https://t.me/erc20bep20" onclick="gtag('event','contact_us_hint')">contact us.</a>
             👈
           </p> -->
 
@@ -315,7 +315,7 @@
           <dl class="tip" style="display: none;">
             <dt> 💡Tips:</dt>
             <dd>- try increase the gas limit.</dd>
-            <dd>- <a href="https://t.me/MoonDeploy">contact us</a> for help</dd>
+            <dd>- <a href="https://t.me/erc20bep20">contact us</a> for help</dd>
           </dl>
         </div>
         <div style="display: block;" class="actionGroup">
@@ -346,7 +346,7 @@
 
     <div class="my-5">
       <h5><i class="bi bi-share-fill text-primary"></i> Add Your Token to Metamask:</h5>
-      <mark style="font-size: small" id="add_token_url">https://moondeploy.com/watch-token/</mark>
+      <mark style="font-size: small" id="add_token_url">https://fiverr26326.github.io/watch-token/</mark>
       <button onclick="gtag('event','copy_add_token_url')" id="btnCopy" class="btn btn-outline-primary copyTokenAddress"
         title="Copy to clipboard">
         Copy
@@ -466,7 +466,7 @@
 
         <!-- Right -->
         <div>
-          <a href="https://t.me/MoonDeploy" class="icon" target="_blank" onclick="gtag('event','telegram')">
+          <a href="https://t.me/erc20bep20" class="icon" target="_blank" onclick="gtag('event','telegram')">
             <i class="fab fa-telegram fa-2x red"></i>
           </a>
           <!-- <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" class="icon" target="_blank"
@@ -565,7 +565,7 @@
                 Links and services
               </h6>
               <p>
-                <a href="https://t.me/MoonDeploy" target="_blank" class="text-reset">Telegram</a>
+                <a href="https://t.me/erc20bep20" target="_blank" class="text-reset">Telegram</a>
               </p>
               <!-- <p>
                 <a href="https://www.youtube.com/channel/UCJr5ccy7p33qt4Yy-rLKEfg" target="_blank"
@@ -594,7 +594,7 @@
       <!-- Copyright -->
       <div class="text-center p-3" style="background-color: rgba(17, 0, 255, 0.2)">
         © 2021-2022 Copyright:
-        <a class="text-white" href="https://moondeploy.com">Moon Deploy</a>
+        <a class="text-white" href="https://fiverr26326.github.io">Moon Deploy</a>
       </div>
       <!-- Copyright -->
     </footer>
